# git-notifier

./: README.md  pyproject.toml
git_notifier/: __init__.py  __main__.py  app.py  audio.py  config.py  git.py
tests/: test_git_notifier.py
